--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,4 +15,12 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
 
+  docker-react-test:
+    container_name: docker-react-test
+    image: docker-react-cml_docker-react-dev
+    volumes:
+      - '/app/node_modules'
+      - '.:/app'
+    command: ["npm", "run", "test"]
+
   
